First version with the logo, routes, and a carousel example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Bienvenido a Agora
-
-    Agrego cambios para el formulario de login
-  </h1>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
