--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 20px;
+}
